--- a/index.html
+++ b/index.html
@@ -1,118 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>EuroOperations</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Europerations — Operational Automation</title>
 
   <style>
-    body {
+    :root {
+      --bg: #f5f7fa;
+      --primary: #0f172a;
+      --secondary: #334155;
+      --accent: #2563eb;
+      --card: #ffffff;
+      --border: #e5e7eb;
+    }
+
+    * {
+      box-sizing: border-box;
       margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0b0b0b;
-      color: #f2f2f2;
+      padding: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif;
     }
 
-    .container {
-      max-width: 780px;
-      margin: 0 auto;
-      padding: 80px 20px;
+    body {
+      background-color: var(--bg);
+      color: var(--primary);
+      line-height: 1.6;
     }
 
-    h1 {
-      font-size: 38px;
+    header {
+      padding: 40px 20px;
+      max-width: 1100px;
+      margin: auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    header img {
+      height: 48px;
+    }
+
+    header nav a {
+      margin-left: 24px;
+      text-decoration: none;
+      color: var(--secondary);
+      font-weight: 500;
+    }
+
+    main {
+      max-width: 1100px;
+      margin: auto;
+      padding: 40px 20px 80px;
+    }
+
+    .hero {
+      display: grid;
+      grid-template-columns: 1.2fr 1fr;
+      gap: 48px;
+      align-items: center;
+      margin-bottom: 80px;
+    }
+
+    .hero h1 {
+      font-size: 42px;
+      line-height: 1.2;
       margin-bottom: 20px;
     }
 
-    p {
+    .hero p {
       font-size: 18px;
-      line-height: 1.6;
-      color: #cccccc;
+      color: var(--secondary);
+      margin-bottom: 32px;
     }
 
-    ul {
-      margin-top: 20px;
-      margin-bottom: 40px;
+    .hero a {
+      display: inline-block;
+      padding: 14px 28px;
+      background-color: var(--accent);
+      color: white;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
     }
 
-    li {
-      margin-bottom: 10px;
+    .card {
+      background-color: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      padding: 32px;
+    }
+
+    .section {
+      margin-bottom: 80px;
+    }
+
+    .section h2 {
+      font-size: 28px;
+      margin-bottom: 24px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 24px;
+    }
+
+    .grid .card h3 {
+      margin-bottom: 12px;
+      font-size: 18px;
+    }
+
+    .grid .card p {
+      color: var(--secondary);
+      font-size: 15px;
     }
 
     .cta {
-      background: #1f1f1f;
-      padding: 30px;
-      border-radius: 8px;
-      margin-top: 40px;
       text-align: center;
+      padding: 48px;
+      background-color: var(--primary);
+      color: white;
+      border-radius: 12px;
+    }
+
+    .cta h2 {
+      font-size: 30px;
+      margin-bottom: 16px;
     }
 
     .cta p {
-      margin-bottom: 20px;
+      margin-bottom: 24px;
+      opacity: 0.9;
     }
 
     .cta a {
-      display: inline-block;
-      padding: 12px 24px;
-      background: #ffffff;
-      color: #000000;
+      background-color: white;
+      color: var(--primary);
+      padding: 14px 28px;
+      border-radius: 6px;
       text-decoration: none;
-      font-weight: bold;
-      border-radius: 4px;
+      font-weight: 600;
     }
 
     footer {
-      margin-top: 80px;
-      font-size: 14px;
-      color: #777;
       text-align: center;
+      padding: 32px 20px;
+      font-size: 14px;
+      color: var(--secondary);
+    }
+
+    @media (max-width: 900px) {
+      .hero {
+        grid-template-columns: 1fr;
+      }
+
+      header {
+        flex-direction: column;
+        gap: 20px;
+      }
     }
   </style>
 </head>
-
 <body>
 
-  <div class="container">
-    <h1>We help European businesses prevent client loss caused by operational disorganisation.</h1>
+<header>
+  <img src="logo.png" alt="Europerations logo">
+  <nav>
+    <a href="#how">How it works</a>
+    <a href="#service">Service</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
 
-    <p>
-      When customer requests arrive through multiple channels and depend on manual attention,
-      delays and missed opportunities become inevitable.
-    </p>
+<main>
 
-    <h2>Who this is for</h2>
-    <ul>
-      <li>Small and medium-sized businesses</li>
-      <li>Multiple communication channels (email, forms, messaging)</li>
-      <li>Requests handled manually</li>
-      <li>Risk of delays or forgotten clients</li>
-    </ul>
-
-    <h2>Who this is NOT for</h2>
-    <ul>
-      <li>Marketing or sales strategy</li>
-      <li>Large or complex software projects</li>
-      <li>Long-term business restructuring</li>
-      <li>Financial or organisational crises</li>
-    </ul>
-
-    <h2>What we deliver</h2>
-    <ul>
-      <li>Centralised request handling</li>
-      <li>Reduced risk of missed clients</li>
-      <li>Less manual checking across platforms</li>
-      <li>More predictability in daily operations</li>
-    </ul>
-
-    <div class="cta">
-      <p>Please answer a few questions so we can assess your case.</p>
-      <a href="#">Start assessment</a>
+  <section class="hero">
+    <div>
+      <h1>We analyse operational problems caused by manual or disorganised workflows.</h1>
+      <p>
+        We help European businesses eliminate operational bottlenecks, reduce human error,
+        and recover lost time through practical automation.
+      </p>
+      <a href="#contact">Request an analysis</a>
     </div>
 
-    <footer>
-      Initial implementations start from €250, subject to adjustment based on project complexity.
-    </footer>
-  </div>
+    <div class="card">
+      <strong>Typical problems we solve:</strong>
+      <ul style="margin-top:16px; padding-left:20px; color: var(--secondary);">
+        <li>Missed or delayed customer requests</li>
+        <li>Manual handling across multiple platforms</li>
+        <li>High dependency on owner attention</li>
+        <li>Operational errors and data risk</li>
+      </ul>
+    </div>
+  </section>
 
-</body>
-</html>
+  <section id="how" class="section">
+    <h2>How it works</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>1. Diagnose</h3>
+        <p>You describe your operational issue through a short form.</p>
+      </div>
+      <div class="card">
+        <h3>2. Analyse</h3>
+        <p>We evaluate where rules can replace manual decisions.</p>
+      </div>
+      <div class="card">
+        <h3>3. Implement</h3>
+        <p>We build a simple, reliable automation adapted to your workflow.</p>
+      </div>
+      <div class="card">
+        <h3>4. Deliver</h3>
+        <p>You receive documentation and a short walkthrough.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="service" class="section">
+    <h2>Service scope</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>What we do</h3>
+        <p>
+          Operational automation, workflow centralisation,
+          notifications, basic integrations and error prevention.
+        </p>
+      </div>
+      <div class="card">
+        <h3>What we don’t do</h3>
+        <p>
+          Daily operation, customer service management,
+          or long-term business administration.
+        </p>
+      </div>
+      <div class="card">
+        <h3>Investment</h3>
+        <p>
+          Automation projects start from €250,
+          adjusted according to complexity.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section">
+    <div class="cta">
+      <h2>Request an operational analysis</h2>
+      <p>Please answer a few questions so we can assess your case.</p>
