--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <body>
 
 <header>
-  <img src="logo.png" alt="Europerations logo">
+  <img src="https://i.ibb.co/NR6pXSj/europerations-logo.png" alt="Europerations logo">
   <nav>
     <a href="#how">How it works</a>
     <a href="#service">Service</a>
@@ -249,7 +249,7 @@
     <div class="cta">
       <h2>Request an operational analysis</h2>
       <p>Please answer a few questions so we can assess your case.</p>
-      <a href="https://forms.gle/SEU-LINK-AQUI" target="_blank">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfd_PugXE2fvAta3r4nb5J1-7gpGrOU5d-_Cx3dWwPkFRyrKA/viewform" target="_blank">
         Open the form
       </a>
     </div>
