--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <body>
 
 <header>
-  <img src="https://i.ibb.co/NR6pXSj/europerations-logo.png" alt="Europerations logo">
+  <img src="https://ibb.co/4wyPDVt3/europerations-logo.png" alt="Europerations logo">
   <nav>
     <a href="#how">How it works</a>
     <a href="#service">Service</a>
