--- a/index.html
+++ b/index.html
@@ -42,10 +42,23 @@
       width: auto;
     }
 
-    header nav a {
-      margin-left: 24px;
+    nav {
+      display: flex;
+      align-items: center;
+      gap: 24px;
+    }
+
+    nav a {
       text-decoration: none;
       color: var(--secondary);
+      font-weight: 500;
+    }
+
+    select {
+      padding: 6px 10px;
+      border-radius: 6px;
+      border: 1px solid var(--border);
+      background: white;
       font-weight: 500;
     }
 
@@ -107,41 +120,12 @@
       gap: 24px;
     }
 
-    .grid .card h3 {
-      margin-bottom: 12px;
-      font-size: 18px;
-    }
-
-    .grid .card p {
-      color: var(--secondary);
-      font-size: 15px;
-    }
-
     .cta {
       text-align: center;
       padding: 48px;
       background-color: var(--primary);
       color: white;
       border-radius: 12px;
-    }
-
-    .cta h2 {
-      font-size: 30px;
-      margin-bottom: 16px;
-    }
-
-    .cta p {
-      margin-bottom: 24px;
-      opacity: 0.9;
-    }
-
-    .cta a {
-      background-color: white;
-      color: var(--primary);
-      padding: 14px 28px;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: 600;
     }
 
     footer {
@@ -163,14 +147,22 @@
     }
   </style>
 </head>
+
 <body>
 
 <header>
-  <img src="https://i.ibb.co/8n36R7st/Gemini-Generated-Image-dnvzxbdnvzxbdnvz-removebg-preview.png/europerations-logo.png" alt="Europerations logo">
+  <img src="https://i.ibb.co/8n36R7st/Gemini-Generated-Image-dnvzxbdnvzxbdnvz-removebg-preview.png" alt="Europerations logo">
+
   <nav>
-    <a href="#how">How it works</a>
-    <a href="#service">Service</a>
-    <a href="#contact">Contact</a>
+    <a href="#how" data-key="navHow"></a>
+    <a href="#service" data-key="navService"></a>
+    <a href="#contact" data-key="navContact"></a>
+
+    <select id="languageSwitcher">
+      <option value="en">EN</option>
+      <option value="de">DE</option>
+      <option value="fr">FR</option>
+    </select>
   </nav>
 </header>
 
@@ -178,89 +170,109 @@
 
   <section class="hero">
     <div>
-      <h1>We analyse operational problems caused by manual or disorganised workflows.</h1>
-      <p>
-        We help European businesses eliminate operational bottlenecks, reduce human error,
-        and recover lost time through practical automation.
-      </p>
-      <a href="#contact">Request an analysis</a>
+      <h1 data-key="heroTitle"></h1>
+      <p data-key="heroText"></p>
+      <a href="#contact" data-key="heroBtn"></a>
     </div>
 
     <div class="card">
-      <strong>Typical problems we solve:</strong>
+      <strong data-key="problemsTitle"></strong>
       <ul style="margin-top:16px; padding-left:20px; color: var(--secondary);">
-        <li>Missed or delayed customer requests</li>
-        <li>Manual handling across multiple platforms</li>
-        <li>High dependency on owner attention</li>
-        <li>Operational errors and data risk</li>
+        <li data-key="p1"></li>
+        <li data-key="p2"></li>
+        <li data-key="p3"></li>
+        <li data-key="p4"></li>
       </ul>
     </div>
   </section>
 
   <section id="how" class="section">
-    <h2>How it works</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>1. Diagnose</h3>
-        <p>You describe your operational issue through a short form.</p>
-      </div>
-      <div class="card">
-        <h3>2. Analyse</h3>
-        <p>We evaluate where rules can replace manual decisions.</p>
-      </div>
-      <div class="card">
-        <h3>3. Implement</h3>
-        <p>We build a simple, reliable automation adapted to your workflow.</p>
-      </div>
-      <div class="card">
-        <h3>4. Deliver</h3>
-        <p>You receive documentation and a short walkthrough.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="service" class="section">
-    <h2>Service scope</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>What we do</h3>
-        <p>
-          Operational automation, workflow centralisation,
-          notifications, basic integrations and error prevention.
-        </p>
-      </div>
-      <div class="card">
-        <h3>What we don’t do</h3>
-        <p>
-          Daily operation, customer service management,
-          or long-term business administration.
-        </p>
-      </div>
-      <div class="card">
-        <h3>Investment</h3>
-        <p>
-          Automation projects start from €250,
-          adjusted according to complexity.
-        </p>
-      </div>
-    </div>
+    <h2 data-key="howTitle"></h2>
   </section>
 
   <section id="contact" class="section">
     <div class="cta">
-      <h2>Request an operational analysis</h2>
-      <p>Please answer a few questions so we can assess your case.</p>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfd_PugXE2fvAta3r4nb5J1-7gpGrOU5d-_Cx3dWwPkFRyrKA/viewform" target="_blank">
-        Open the form
-      </a>
+      <h2 data-key="ctaTitle"></h2>
+      <p data-key="ctaText"></p>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfd_PugXE2fvAta3r4nb5J1-7gpGrOU5d-_Cx3dWwPkFRyrKA/viewform" target="_blank" data-key="ctaBtn"></a>
     </div>
   </section>
 
 </main>
 
-<footer>
-  © 2025 Europerations — Operational Automation
-</footer>
+<footer data-key="footer"></footer>
+
+<script>
+const translations = {
+  en: {
+    navHow: "How it works",
+    navService: "Service",
+    navContact: "Contact",
+    heroTitle: "We analyse operational problems caused by manual or disorganised workflows.",
+    heroText: "We help European businesses eliminate bottlenecks, reduce errors and recover time through automation.",
+    heroBtn: "Request an analysis",
+    problemsTitle: "Typical problems we solve:",
+    p1: "Missed or delayed requests",
+    p2: "Manual work across platforms",
+    p3: "Owner dependency",
+    p4: "Operational errors",
+    howTitle: "How it works",
+    ctaTitle: "Request an operational analysis",
+    ctaText: "Answer a few questions so we can assess your case.",
+    ctaBtn: "Open the form",
+    footer: "© 2025 Europerations — Operational Automation"
+  },
+  de: {
+    navHow: "Ablauf",
+    navService: "Service",
+    navContact: "Kontakt",
+    heroTitle: "Wir analysieren operative Probleme durch manuelle oder ungeordnete Abläufe.",
+    heroText: "Wir helfen europäischen Unternehmen, Engpässe zu beseitigen und Zeit durch Automatisierung zu gewinnen.",
+    heroBtn: "Analyse anfordern",
+    problemsTitle: "Typische Probleme:",
+    p1: "Verpasste Kundenanfragen",
+    p2: "Manuelle Prozesse",
+    p3: "Abhängigkeit vom Inhaber",
+    p4: "Operative Fehler",
+    howTitle: "So funktioniert es",
+    ctaTitle: "Operative Analyse anfordern",
+    ctaText: "Beantworten Sie einige Fragen zur Bewertung.",
+    ctaBtn: "Formular öffnen",
+    footer: "© 2025 Europerations — Operative Automatisierung"
+  },
+  fr: {
+    navHow: "Fonctionnement",
+    navService: "Service",
+    navContact: "Contact",
+    heroTitle: "Nous analysons les problèmes opérationnels causés par des flux manuels ou désorganisés.",
+    heroText: "Nous aidons les entreprises européennes à éliminer les blocages grâce à l’automatisation.",
+    heroBtn: "Demander une analyse",
+    problemsTitle: "Problèmes courants :",
+    p1: "Demandes clients manquées",
+    p2: "Traitement manuel",
+    p3: "Dépendance au dirigeant",
+    p4: "Erreurs opérationnelles",
+    howTitle: "Comment ça marche",
+    ctaTitle: "Demander une analyse opérationnelle",
+    ctaText: "Répondez à quelques questions.",
+    ctaBtn: "Ouvrir le formulaire",
+    footer: "© 2025 Europerations — Automatisation opérationnelle"
+  }
+};
+
+function setLanguage(lang) {
+  document.documentElement.lang = lang;
+  document.querySelectorAll("[data-key]").forEach(el => {
+    el.textContent = translations[lang][el.dataset.key];
+  });
+}
+
+document.getElementById("languageSwitcher").addEventListener("change", e => {
+  setLanguage(e.target.value);
+});
+
+setLanguage("en");
+</script>
 
 </body>
 </html>
